--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.5",
     "@astrojs/check": "^0.8.1",
+    "astro": "^4.11.5",
+    "astro-icon": "^1.1.0",
     "typescript": "^5.5.3"
   }
 }
