--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.1",
+    "@astrojs/preact": "^3.5.0",
     "astro": "^4.11.5",
     "astro-icon": "^1.1.0",
+    "axios": "^1.7.2",
+    "preact": "^10.22.1",
     "typescript": "^5.5.3"
   }
 }
