--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@components/*" : ["src/components/*"],
       "@models/*" : ["src/models/*"],
       "@services/*" : ["src/services/*"],
+      "@adapters/*" : ["src/adapters/*"],
       "@utils/*" : ["src/utils/*"],
     },
     "jsx": "react-jsx",
